# ProyectoTaller-Luminegro

./: CMakeLists.txt  README.md
Luminegro/: .cproject  .project
Parallax/: Imagen.cpp  Parallax.cpp  Parallax.h  Textura.cpp  Textura.h  VentanaDeJuego.cpp  VentanaDeJuego.h  mainParallax.cpp
Parallax/Debug/: Imagen.d  Parallax  Parallax.d  Renderizador.d  Textura.d  VentanaDeJuego.d  mainParallax.d  makefile  subdir.mk
ProyectoTaller-Luminegro/: .cproject  .project
ProyectoTaller-Luminegro-master/src/: Enemigo.cpp  Enemigo.h  EstadoEnemigoFrenado.h  EstadoJugador.h  EstadoJugadorAvanzando.h  EstadoJugadorFrenado.cpp  EstadoJugadorFrenado.h  Protagonista.cpp  Protagonista.h  Textura.cpp  VentanaDeJuego.cpp  logger.cpp  main.cpp
ProyectoTaller.Luminegro/: .cproject  .project
ProyectoTaller.Luminegro/Debug/: makefile
ProyectoTaller.Luminegro/Debug/src/: Encuadre.d  EstadoJugador.d  EstadoJugadorAvanzando.d  EstadoJugadorFrenado.d  Imagen.d  Parallax.d  Protagonista.d  Renderizador.d  Textura.d  VentanaDeJuego.d  logger.d  main.d  subdir.mk
ProyectoTaller.Luminegro/src/: main.cpp
config/: default.xml  repiola.xml
src/: Barril.cpp  Barril.h  BarrilModelo.cpp  BarrilModelo.h  Caja.cpp  Caja.h  CajaModelo.cpp  Cliente.cpp  Cliente.h  Cola.cpp  Cola.h  ConfigManager.cpp  ConfigManager.h  ControlEnemigos.cpp  ControlEnemigos.h  ControlEnemigosModelo.cpp  ControlEnemigosModelo.h  ControlJugadores.cpp  ControlJugadores.h  ControlObjetos.cpp  ControlObjetos.h  ControlObjetosModelo.cpp  ControlObjetosModelo.h  Cuchillo.cpp  Cuchillo.h  CuchilloModelo.cpp  Elemento.cpp  Elemento.h  ElementoModelo.cpp  ElementoModelo.h  Encuadre.cpp  Encuadre.h  Enemigo.cpp  Enemigo.h  EnemigoModelo.cpp  EnemigoModelo.h  EstadoEnemigoAvanzando.cpp  EstadoEnemigoAvanzando.h  EstadoEnemigoFrenado.cpp  EstadoEnemigoParado.cpp  (+80 more)
src/comunicacion/: AceptadorConexiones.cpp  AceptadorConexiones.h  EnviadorMensajesCliente.cpp  EnviadorMensajesCliente.h  EnviadorMensajesServidor.cpp  EnviadorMensajesServidor.h  MensajeCliente.cpp  MensajeCliente.h  MensajeCredenciales.cpp  MensajeCredenciales.h  MensajeEstadoJugador.cpp  MensajeEstadoJugador.h  MensajeInicioPartida.cpp  MensajeInicioPartida.h  MensajeServidor.cpp  MensajeServidor.h  RechazadorConexiones.cpp  RechazadorConexiones.h  RecibidorMensajesCliente.cpp  RecibidorMensajesCliente.h  RecibidorMensajesServidor.cpp  RecibidorMensajesServidor.h  Socket.cpp  Socket.h  UsuarioYClave.cpp  UsuarioYClave.h
src/estados/: EstadoEnemigoAvanzando.cpp  EstadoEnemigoAvanzando.h  EstadoEnemigoGolpeado.cpp  EstadoEnemigoGolpeado.h  EstadoEnemigoMuriendo.cpp  EstadoEnemigoMuriendo.h  EstadoEnemigoParado.cpp  EstadoEnemigoParado.h  EstadoEnemigoPegando.cpp  EstadoEnemigoPegando.h  EstadoJugador.cpp  EstadoJugador.h  EstadoJugadorAcuchillando.cpp  EstadoJugadorAcuchillando.h  EstadoJugadorAgachado.cpp  EstadoJugadorAgachado.h  EstadoJugadorApaleando.cpp  EstadoJugadorApaleando.h  EstadoJugadorAvanzando.cpp  EstadoJugadorAvanzando.h  EstadoJugadorCongelado.cpp  EstadoJugadorCongelado.h  EstadoJugadorGolpeado.cpp  EstadoJugadorGolpeado.h  EstadoJugadorMuriendo.cpp  EstadoJugadorMuriendo.h  EstadoJugadorParado.cpp  EstadoJugadorParado.h  EstadoJugadorPateando.cpp  EstadoJugadorPateando.h  EstadoJugadorPegando.cpp  EstadoJugadorPegando.h  EstadoJugadorSaltando.cpp  EstadoJugadorSaltando.h  EstadoObjeto.cpp  EstadoObjeto.h  EstadoObjetoEntero.cpp  EstadoObjetoEntero.h  EstadoObjetoRoto.cpp  EstadoObjetoRoto.h
src/grafica/: Encuadre.cpp  Encuadre.h  Imagen.cpp  Imagen.h  Renderizador.cpp  Textura.cpp  Textura.h  VentanaCliente.cpp  VentanaCliente.h  VentanaClienteInicioSesion.cpp  VentanaClienteInicioSesion.h
src/modelos/: BarrilModelo.cpp  BarrilModelo.h  CajaModelo.cpp  CajaModelo.h  Colisionable.cpp  Colisionable.h  Colisionador.cpp  Colisionador.h  ControlEnemigosModelo.cpp  ControlEnemigosModelo.h  ControlJugadoresModelo.cpp  ControlJugadoresModelo.h  ControlObjetosModelo.cpp  ControlObjetosModelo.h  CuchilloModelo.cpp  CuchilloModelo.h  ElementoModelo.cpp  ElementoModelo.h  EnemigoJefeModelo.cpp  EnemigoJefeModelo.h  EnemigoModelo.cpp  EnemigoModelo.h  FondoModelo.cpp  FondoModelo.h  JugadorModelo.cpp  JugadorModelo.h  Modelo.cpp  Modelo.h  PersonaModelo.cpp  PersonaModelo.h  TipoDeArma.h  TuboModelo.cpp  TuboModelo.h
src/sonidos/: MusicaFondo.cpp  MusicaFondo.h
src/varios/: Cliente.cpp  Cliente.h  Cola.cpp  Cola.h  ColaMensajesCliente.cpp  ColaMensajesCliente.h  ColaMensajesServidor.cpp  ColaMensajesServidor.h  Common.cpp  Common.h  ConfigManager.cpp  ConfigManager.h  ContadorDeJugadores.cpp  ContadorDeJugadores.h  GestorThreads.cpp  GestorThreads.h  GestorThreadsCliente.cpp  GestorThreadsCliente.h  GestorThreadsServidor.cpp  GestorThreadsServidor.h  InfoJugador.cpp  InfoJugador.h  InformacionJugador.cpp  InformacionJugador.h  Logger.cpp  Logger.h  MensajeCliente.h  MensajeCredenciales.cpp  MensajeServidor.cpp  MensajeServidor.h  RecibidorMensajesCliente.cpp  RecibidorMensajesCliente.h  Servidor.cpp  Servidor.h  Socket.cpp  Socket.h  Sonidos.cpp  Sonidos.h
src/vistas/: VistaEnemigo.cpp  VistaEnemigo.h  VistaEstado.cpp  VistaEstado.h  VistaFondo.cpp  VistaFondoCielo.cpp  VistaFondoCielo.h  VistaFondoEdificios.h  VistaFondoTerreno.h  VistaGeneral.cpp  VistaGeneral.h  VistaJugador.cpp  VistaJugador.h  VistaObjeto.cpp  VistaObjeto.h  VistaTransicionJuego.cpp  VistaTransicionJuego.h
