cmake_minimum_required(VERSION 3.14)
project(ProyectoTaller_Luminegro)

set(CMAKE_CXX_STANDARD 14)

include_directories(lib/pugixml)
include_directories(src)

find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})

add_executable(ProyectoTaller_Luminegro
        lib/pugixml/pugiconfig.hpp
        lib/pugixml/pugixml.cpp
        lib/pugixml/pugixml.hpp
        src/Barril.cpp
        src/Barril.h
        src/BarrilModelo.cpp
        src/BarrilModelo.h
        src/Caja.cpp
        src/Caja.h
        src/CajaModelo.cpp
        src/CajaModelo.h
        src/Cliente.cpp
        src/Cliente.h
        src/ControlEnemigos.cpp
        src/ControlEnemigos.h
        src/ControlEnemigosModelo.cpp
        src/ControlEnemigosModelo.h
        src/ControlJugadores.cpp
        src/ControlJugadores.h
        src/ControlObjetos.cpp
        src/ControlObjetos.h
        src/ControlObjetosModelo.cpp
        src/ControlObjetosModelo.h
        src/Cuchillo.cpp
        src/Cuchillo.h
        src/CuchilloModelo.cpp
        src/CuchilloModelo.h
        src/Elemento.cpp
        src/Elemento.h
        src/ElementoModelo.cpp
        src/ElementoModelo.h
        src/Encuadre.cpp
        src/Encuadre.h
        src/Enemigo.cpp
        src/Enemigo.h
        src/EnemigoModelo.cpp
        src/EnemigoModelo.h
        src/EstadoEnemigoAvanzando.cpp
        src/EstadoEnemigoAvanzando.h
        src/EstadoEnemigoParado.cpp
        src/EstadoEnemigoParado.h
        src/EstadoJugador.cpp
        src/EstadoJugador.h
        src/EstadoJugadorAgachado.cpp
        src/EstadoJugadorAgachado.h
        src/EstadoJugadorAvanzando.cpp
        src/EstadoJugadorAvanzando.h
        src/EstadoJugadorParado.cpp
        src/EstadoJugadorParado.h
        src/EstadoJugadorPateando.cpp
        src/EstadoJugadorPateando.h
        src/EstadoJugadorPegando.cpp
        src/EstadoJugadorPegando.h
        src/EstadoJugadorSaltando.cpp
        src/EstadoJugadorSaltando.h
        src/Fondo.cpp
        src/Fondo.h
        src/FondoModelo.cpp
        src/FondoModelo.h
        src/Imagen.cpp
        src/Imagen.h
        src/Jugador.cpp
        src/Jugador.h
        src/JugadorModelo.cpp
        src/JugadorModelo.h
        src/Logger.cpp
        src/Logger.h
        src/main.cpp
        src/MensajeCliente.cpp
        src/MensajeCliente.h
        src/MensajeServidor.cpp
        src/MensajeServidor.h
        src/Persona.cpp
        src/Persona.h
        src/PersonaModelo.cpp
        src/PersonaModelo.h
        src/Protagonista.cpp
        src/Protagonista.h
        src/Renderizador.cpp
        src/Renderizador.h
        src/Servidor.cpp
        src/Servidor.h
        src/VentanaClienteInicioSesion.cpp
        src/VentanaClienteInicioSesion.h
        src/Socket.cpp
        src/Socket.h
        src/Textura.cpp
        src/Textura.h
        src/Tubo.cpp
        src/Tubo.h
        src/TuboModelo.cpp
        src/TuboModelo.h
        src/ConfigManager.cpp
        src/ConfigManager.h
        src/VentanaCliente.cpp
        src/VentanaCliente.h
        src/VentanaDeJuego.cpp
        src/VentanaDeJuego.h
        src/VistaEnemigo.cpp
        src/VistaEnemigo.h
        src/VistaFondo.cpp
        src/VistaFondo.h
        src/VistaJugador.cpp
        src/VistaJugador.h
        src/VistaObjeto.cpp
        src/VistaObjeto.h src/Cola.cpp src/Cola.h)
target_link_libraries(ProyectoTaller_Luminegro ${SDL2_LIBRARIES})
target_link_libraries(ProyectoTaller_Luminegro ${SDL2TTF_LIBRARIES})

